--- a/Homework2.html
+++ b/Homework2.html
@@ -4,8 +4,9 @@
 	Homework 2: Screen for Charity Admin and Charity Voulnteer
 </head>
 <body>
-<img https://raw.githubusercontent.com/Nvillasenor878/SoftwareDevXUAttempt2/master/CharityAdminHomeScreen.png>
-<img https://raw.githubusercontent.com/Nvillasenor878/SoftwareDevXUAttempt2/master/CharityVolunteerHomeScreen.png>
+<img src="https://raw.githubusercontent.com/Nvillasenor878/SoftwareDevXUAttempt2/master/CharityAdminHomeScreen.png">
+
+<img src="https://raw.githubusercontent.com/Nvillasenor878/SoftwareDevXUAttempt2/master/CharityVolunteerHomeScreen.png">
 
 </body>
 </html>
